RESOLVED FIXED310395
Unified build fix for TextAnimationTypes.
https://bugs.webkit.org/show_bug.cgi?id=310395
Summary Unified build fix for TextAnimationTypes.
Megan Gardner
Reported 2026-03-20 14:55:18 PDT
Unified build fix for TextAnimationTypes.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-20 14:55:27 PDT
Megan Gardner
Comment 2 2026-03-20 15:00:08 PDT
EWS
Comment 3 2026-03-20 15:57:13 PDT
Committed 309643@main (463c77b691bc): <https://commits.webkit.org/309643@main> Reviewed commits have been landed. Closing PR #61042 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.