Unified build fix for TextAnimationTypes. rdar://173030776 https://bugs.webkit.org/show_bug.cgi?id=310395

Reviewed by Aditya Keerthi.

* Source/WebCore/page/TextAnimationTypes.h:

Canonical link: https://commits.webkit.org/309643@main